# soiltemp

./: .coveragerc  .cruft.json  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  populate.py  pyproject.toml
conda/: environment.yml
doc/: conf.py  extra.md  index.md  installation.md
doc/examples/: example1.ipynb  example2.ipynb
src/openalea/ApsimCampbell/: SoiltempComponent.py
src/openalea/BiomaSurfacePartonSoilSWATHourlyPartonC/: SurfacePartonSoilSWATHourlyPartonCComponent.py
src/openalea/BiomaSurfaceSWATSoilSWATC/: SurfaceSWATSoilSWATCComponent.py
src/openalea/DSSAT_EPICST_standalone/: STEMP_EPIC_Component.py
src/openalea/DSSAT_ST_standalone/: STEMP_Component.py
src/openalea/Monica_SoilTemp/: SoilTemperatureCompComponent.py
src/openalea/SQ_Soil_Temperature/: SoilTemperatureComponent.py
src/openalea/Simplace_Soil_Temperature/: SoilTemperatureComponent.py  __wralea__.py
src/openalea/soiltemp/: __wralea__.py  configuration.py  model.py  standalone.py
src/openalea/soiltemp/data/: SoilData.txt  Treatment.txt  __init__.py
src/openalea/soiltemp_wralea/: __init__.py  __wralea__.py
test/: test_apsim.py  test_campbell.py  test_campbell_real_spinup.py  test_models.py  test_sirius.py  test_soiltemp.py
test/inputs/: daily_grignon_meteo.csv  data_480.pckl
