[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
]
build-backend = "setuptools.build_meta"

# where your source lies if you followed src layout
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = false # force explicit declaration of data (disable automatic inclusion)

# enable dynamic version based on git tags
[tool.setuptools_scm]

[project]
name = "openalea.soiltemp"
authors = [
  { name = "C Pradal" },
]
description = "FSPM tools for OpenAlea"
readme = "README.md"
license = "CECILL-C"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]

# you can list here all dependencies that are pip-instalable, and that have a name identical to the one used by conda (to allow reuse of this list in meta.yaml)
# If conda name is different, please do not declare the pip name, and declare conda name in the next section
dependencies = [
  "numpy",
]

[project.optional-dependencies]
test = [
  "pytest",
  "nbmake",
]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
]
doc = [
  "sphinx-autobuild",
  "pydata-sphinx-theme",
  "myst-parser",
  "sphinx-favicon",
  "ipykernel",
  "sphinx-copybutton",
  "ipython_genutils",
  "nbsphinx",
]

# section specific to conda-only distributed package (not used by pip yet)
[tool.conda.environment]
channels = [
  "openalea3",
  "conda-forge"
]
dependencies = [
  "numpy",
]

[project.urls]
Repository = "https://github.com/openalea/soiltemp"
Homepage = "https://soiltemp.readthedocs.io/"
"Bug Tracker" = "https://github.com/openalea/soiltemp/issues"
Discussions = "https://github.com/openalea/soiltemp/discussions"
Changelog = "https://github.com/openalea/soiltemp/releases"

[project.entry-points."wralea"]
"ApsimCampbell" = "openalea.ApsimCampbell"
"BiomaSurfacePartonSoilSWATHourlyPartonC" = "openalea.BiomaSurfacePartonSoilSWATHourlyPartonC"
"BiomaSurfaceSWATSoilSWATC" = "openalea.BiomaSurfaceSWATSoilSWATC"
"DSSAT_EPICST_standalone" = "openalea.DSSAT_EPICST_standalone"
"DSSAT_ST_standalone" = "openalea.DSSAT_ST_standalone"
"Monica_SoilTemp" = "openalea.Monica_SoilTemp"
"Simplace_Soil_Temperature" = "openalea.Simplace_Soil_Temperature"
"SQ_Soil_Temperature" = "openalea.SQ_Soil_Temperature"
"SoilTemp" = "openalea.soiltemp"
"SoilTempTuto" = "openalea.soiltemp_wralea"